@@ -115,6 +115,7 @@ typedef struct
     int rolloverNotify;
     char* DSSubmitCmd;
     int DSSubCKA_ID;
+	char* policy;
 
     int log_user; /* log facility (or default of LOG_DAEMON) */
 
