@@ -1,0 +1,128 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<KASP>
+	<Policy name="default">
+		<Description>default fast test policy</Description>
+		<Signatures>
+			<Resign>PT3M</Resign>
+			<Refresh>PT15M</Refresh>
+			<Validity>
+				<Default>PT1H</Default>
+				<Denial>PT1H</Denial>
+			</Validity>
+			<Jitter>PT1M</Jitter>
+			<InceptionOffset>PT1M</InceptionOffset>
+		</Signatures>
+		<Denial>
+			<NSEC3>
+				<OptOut/>
+				<Resalt>P10D</Resalt>
+				<Hash>
+					<Algorithm>1</Algorithm>
+					<Iterations>5</Iterations>
+					<Salt length="8"/>
+				</Hash>
+			</NSEC3>
+		</Denial>
+		<Keys>
+			<TTL>PT10M</TTL>
+			<RetireSafety>PT10M</RetireSafety>
+			<PublishSafety>PT10M</PublishSafety>
+			<ShareKeys/>
+			<Purge>P1D</Purge>
+			<KSK>
+				<Algorithm length="2048">7</Algorithm>
+				<Lifetime>P3D</Lifetime>
+				<Repository>SoftHSM</Repository>
+				<Standby>0</Standby>
+			</KSK>
+			<ZSK>
+				<Algorithm length="1024">7</Algorithm>
+				<Lifetime>PT12H</Lifetime>
+				<Repository>SoftHSM</Repository>
+				<Standby>0</Standby>
+			</ZSK>
+		</Keys>
+		<Zone>
+			<PropagationDelay>PT30M</PropagationDelay>
+			<SOA>
+				<TTL>PT10M</TTL>
+				<Minimum>PT5M</Minimum>
+				<Serial>unixtime</Serial>
+			</SOA>
+		</Zone>
+		<Parent>
+			<PropagationDelay>PT20M</PropagationDelay>
+			<DS>
+				<TTL>PT10M</TTL>
+			</DS>
+			<SOA>
+				<TTL>PT5H</TTL>
+				<Minimum>PT2H</Minimum>
+			</SOA>
+		</Parent>
+	</Policy>
+	
+	<Policy name="other">
+		<Description>default fast test policy</Description>
+		<Signatures>
+			<Resign>PT3M</Resign>
+			<Refresh>PT15M</Refresh>
+			<Validity>
+				<Default>PT1H</Default>
+				<Denial>PT1H</Denial>
+			</Validity>
+			<Jitter>PT1M</Jitter>
+			<InceptionOffset>PT1M</InceptionOffset>
+		</Signatures>
+		<Denial>
+			<NSEC3>
+				<OptOut/>
+				<Resalt>P10D</Resalt>
+				<Hash>
+					<Algorithm>1</Algorithm>
+					<Iterations>5</Iterations>
+					<Salt length="8"/>
+				</Hash>
+			</NSEC3>
+		</Denial>
+		<Keys>
+			<TTL>PT10M</TTL>
+			<RetireSafety>PT10M</RetireSafety>
+			<PublishSafety>PT10M</PublishSafety>
+			<ShareKeys/>
+			<Purge>P1D</Purge>
+			<KSK>
+				<Algorithm length="2048">7</Algorithm>
+				<Lifetime>P3D</Lifetime>
+				<Repository>SoftHSM</Repository>
+				<Standby>0</Standby>
+			</KSK>
+			<ZSK>
+				<Algorithm length="1024">7</Algorithm>
+				<Lifetime>PT12H</Lifetime>
+				<Repository>SoftHSM</Repository>
+				<Standby>0</Standby>
+			</ZSK>
+		</Keys>
+		<Zone>
+			<PropagationDelay>PT30M</PropagationDelay>
+			<SOA>
+				<TTL>PT10M</TTL>
+				<Minimum>PT5M</Minimum>
+				<Serial>unixtime</Serial>
+			</SOA>
+		</Zone>
+		<Parent>
+			<PropagationDelay>PT20M</PropagationDelay>
+			<DS>
+				<TTL>PT10M</TTL>
+			</DS>
+			<SOA>
+				<TTL>PT5H</TTL>
+				<Minimum>PT2H</Minimum>
+			</SOA>
+		</Parent>
+	</Policy>	
+
+</KASP>
