@@ -1,0 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<ZoneList>
+	<Zone name="ods">
+		<Policy>default</Policy>
+		<SignerConfiguration>@INSTALL_ROOT@/var/opendnssec/signconf/ods.xml</SignerConfiguration>
+		<Adapters>
+			<Input>
+				<File>@INSTALL_ROOT@/var/opendnssec/unsigned/ods</File>
+			</Input>
+			<Output>
+				<File>@INSTALL_ROOT@/var/opendnssec/signed/ods</File>
+			</Output>
+		</Adapters>
+	</Zone>
+	<Zone name="ods1">
+		<Policy>default</Policy>
+		<SignerConfiguration>@INSTALL_ROOT@/var/opendnssec/signconf/ods1.xml</SignerConfiguration>
+		<Adapters>
+			<Input>
+				<File>@INSTALL_ROOT@/var/opendnssec/unsigned/ods1</File>
+			</Input>
+			<Output>
+				<File>@INSTALL_ROOT@/var/opendnssec/signed/ods1</File>
+			</Output>
+		</Adapters>
+	</Zone>	
+	<Zone name="ods2">
+		<Policy>other</Policy>
+		<SignerConfiguration>@INSTALL_ROOT@/var/opendnssec/signconf/ods2.xml</SignerConfiguration>
+		<Adapters>
+			<Input>
+				<File>@INSTALL_ROOT@/var/opendnssec/unsigned/ods2</File>
+			</Input>
+			<Output>
+				<File>@INSTALL_ROOT@/var/opendnssec/signed/ods2</File>
+			</Output>
+		</Adapters>
+	</Zone>	
+</ZoneList>
