@@ -9,6 +9,9 @@ OpenDNSSEC 1.4.3
   and <output> values for DNS adapters.
 * OPENDNSSEC-454: ods-ksmutil: Add option for 'ods-ksmutil key import' to
   check if there is a matching key in the repository before import.
+* OPENDNSSEC-458: Add 'ods-enforcerd -p <policy>' option. This prompts the 
+  enforcer to run once and only process the specified policy and associated
+  zones.
 
 
 Bugfixes:
